fix: update css to display voting rules on mobile

--- a/app/packs/stylesheets/decidim/global_adjustments.scss
+++ b/app/packs/stylesheets/decidim/global_adjustments.scss
@@ -16,3 +16,10 @@
 .main-bar__links-desktop__item-wrapper div:has(a[aria-label="Activité"]) {
   display: none;
 }
+/* always show the rules to vote on budgets */
+.budget-summary__progressbox--checked_out {
+  display: block !important;
+}
+.budget-summary__progressbar {
+  margin-top: 1rem !important;
+}
